# Portakal-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/Editor/: CMakeLists.txt  EditorModules.h
src/Editor/Asset/: AsserSerializers.h  AssetAuthoringTools.h  AssetAuthorizationTools.h  AssetImporters.h  AssetOpenOperations.h  AssetVisualizers.h  CustomAssetAuthoringToolAttribute.h  CustomAssetAuthoringToolAttribute.reflect.h  CustomAssetAuthorizationToolAttribute.h  CustomAssetImporterAttribute.h  CustomAssetImporterAttribute.reflect.h  CustomAssetOpenOperationAttribute.h  CustomAssetOpenOperationAttribute.reflect.h  CustomAssetProcessorAttribute.h  CustomAssetProcessorAttribute.reflect.h  CustomAssetSerializerAttribute.h  CustomAssetSerializerAttribute.reflect.h  CustomAssetVisualizerAttribute.h  CustomAssetVisualizerAttribute.reflect.h  IAssetAuthoringTool.h  IAssetAuthoringTool.reflect.h  IAssetAuthorizationTool.h  IAssetImporter.h  IAssetImporter.reflect.h  IAssetOpenOperation.h  IAssetOpenOperation.reflect.h  IAssetProcessor.h  IAssetProcessor.reflect.h  IAssetSerializer.h  IAssetSerializer.reflect.h  IAssetVisualizer.h  IAssetVisualizer.reflect.h  SimpleTextAssetImporter.cpp  SimpleTextAssetImporter.h  SimpleTextAssetImporter2.h  SimpleTextAssetVisualizer.cpp  SimpleTextAssetVisualizer.h  TextAssetSerializer.cpp  TextAssetSerializer.h  TextureAssetImporter.h  (+2 more)
src/Editor/Asset/AuthoringTools/: ShaderAuthoringTool.cpp  ShaderAuthoringTool.h  ShaderAuthoringTool.reflect.h  TextureAuthoringTool.cpp  TextureAuthoringTool.h  TextureAuthoringTool.reflect.h
src/Editor/Asset/AuthorizationTools/: ShaderAuthoringTool.cpp  ShaderAuthoringTool.h  ShaderAuthoringTool.reflect.h  TextureAuthoringTool.cpp  TextureAuthoringTool.h  TextureAuthoringTool.reflect.h  TextureAuthorizationTool.cpp  TextureAuthorizationTool.h
src/Editor/Asset/Importers/: SimpleTextAssetImporter.cpp  SimpleTextAssetImporter.h  SimpleTextAssetImporter.reflect.h  SimpleTextAssetImporter2.cpp  SimpleTextAssetImporter2.h  SimpleTextAssetImporter2.reflect.h  TextureAssetImporter.cpp  TextureAssetImporter.h  TextureAssetImporter.reflect.h
src/Editor/Asset/OpenOperations/: SceneOpenOperation.cpp  SceneOpenOperation.h  SceneOpenOperation.reflect.h
src/Editor/Asset/Serializers/: MaterialAssetSerializer.cpp  MaterialAssetSerializer.h  MaterialAssetSerializer.reflect.h  SceneAssetSerializer.cpp  SceneAssetSerializer.h  SceneAssetSerializer.reflect.h  ShaderAssetSerializer.cpp  ShaderAssetSerializer.h  ShaderAssetSerializer.reflect.h  TextAssetSerializer.cpp  TextAssetSerializer.h  TextAssetSerializer.reflect.h  TextureAssetSerializer.cpp  TextureAssetSerializer.h  TextureAssetSerializer.reflect.h
src/Editor/Asset/Visualizers/: MaterialAssetVisualizer.cpp  MaterialAssetVisualizer.h  MaterialAssetVisualizer.reflect.h  SceneAssetVisualizer.cpp  SceneAssetVisualizer.h  SceneAssetVisualizer.reflect.h  ShaderAssetVisualizer.cpp  ShaderAssetVisualizer.h  ShaderAssetVisualizer.reflect.h  SimpleTextAssetVisualizer.cpp  SimpleTextAssetVisualizer.h  SimpleTextAssetVisualizer.reflect.h  TextureAssetVisualizer.cpp  TextureAssetVisualizer.h  TextureAssetVisualizer.reflect.h
src/Editor/Asset/Yaml/: SceneDescriptorYamlSerializer.cpp  SceneDescriptorYamlSerializer.h  SceneDescriptorYamlSerializer.reflect.h  ShaderObjectDescriptorYamlSerializer.cpp  ShaderObjectDescriptorYamlSerializer.h  ShaderObjectDescriptorYamlSerializer.reflect.h
src/Editor/Compiler/: Compiler.cpp  Compiler.h  CpuArchitecture.h  MSVCCompiler.cpp  MSVCCompiler.h
src/Editor/Domain/: DomainAPI.cpp  DomainAPI.h  DomainFile.cpp  DomainFile.h  DomainFileDescriptor.h  DomainFileDescriptor.reflect.h  DomainFileDescriptorYamlSerialize.cpp  DomainFileDescriptorYamlSerialize.h  DomainFileDescriptorYamlSerializer.cpp  DomainFileDescriptorYamlSerializer.h  DomainFileDescriptorYamlSerializer.reflect.h  DomainFileExtensions.h  DomainFolder.cpp  DomainFolder.h  DomainModule.cpp  DomainModule.h  DomainModule.reflect.h
src/Editor/GUI/: EditorWindow.h  GUICustomMenuItem.h  GUIDefaultVisualizer.cpp  GUIDefaultVisualizer.h  GUIMenuItemBehaviour.h  GUIWindowModule.cpp  GUIWindowModule.h
src/Editor/GUI/Component/: CustomEditorComponentAttribute.h  CustomEditorComponentAttribute.reflect.h  EditorComponentVisualizer.cpp  EditorComponentVisualizer.h  (+2 more)
src/Editor/Game/: EditorGameAPI.cpp  EditorGameAPI.h  EditorGameModule.cpp  EditorGameModule.h  EditorGameModule.reflect.h  EditorGameState.h
src/Editor/Project/: Project.h  Project.reflect.h  ProjectAPI.cpp  ProjectAPI.h  ProjectGenerator.cpp  ProjectGenerator.h  ProjectModule.cpp  ProjectModule.h  ProjectModule.reflect.h  ProjectPaths.cpp  ProjectPaths.h  ProjectYaml.h  ProjectYaml.reflect.h  ProjectYamlSerializer.cpp  ProjectYamlSerializer.h  ProjectYamlSerializer.reflect.h
src/Editor/Renderer/: DX11ImGuiRenderer.cpp  DX11ImGuiRenderer.h  DX11ImGuiTextureBinding.cpp  DX11ImGuiTextureBinding.h  DX12ImGuiRenderer.cpp  DX12ImGuiRenderer.h  DX12ImGuiTextureBinding.cpp  DX12ImGuiTextureBinding.h  GUIColorType.h  GUICommands.cpp  GUICommands.h  GUIInputTextFlags.h  ImGuiAPI.cpp  ImGuiAPI.h  ImGuiExecutorModule.cpp  ImGuiExecutorModule.h  ImGuiExecutorModule.reflect.h  ImGuiKeys.cpp  ImGuiKeys.h  ImGuiRenderPass.cpp  ImGuiRenderPass.h  ImGuiRenderer.cpp  ImGuiRenderer.h  ImGuiRendererModule.cpp  ImGuiRendererModule.h  ImGuiRendererModule.reflect.h  ImGuiTextureBinding.cpp  ImGuiTextureBinding.h
src/Editor/Resource/: EditorImageResource.cpp  EditorImageResource.h  EditorResource.h  EditorResourceAPI.cpp  EditorResourceAPI.h  EditorResourceModule.cpp  EditorResourceModule.h  EditorResourceModule.reflect.h  EditorResourceRequest.h  EditorResourceType.h
src/EditorLauncher/: CMakeLists.txt
src/EditorPlayer/: CMakeLists.txt  EditorPlayerApplication.cpp  EditorPlayerApplication.h  main.cpp
src/Libs/ImGui/: CMakeLists.txt  imgui.cpp  imgui.h  imgui_internal.h
src/Player/: CMakeLists.txt
src/Portakal/: CMakeLists.txt
src/Portakal/Core/: Core.h
src/Portakal/Window/: Window.cpp  Window.h  WindowCreateDesc.h
(+861 files in other folders)
